[feature] 登录注册 UI、admin侧边栏

--- a/apps/studio-admin/styles/main.less
+++ b/apps/studio-admin/styles/main.less
@@ -5,4 +5,23 @@ body {
   position: relative;
   min-height: 100%;
   margin: 0;
+  font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+#__next, html, head, body {
+  height: 100%;
+}
+
+img {
+  pointer-events: none;
+}
+
+a, a:active, a:visited, a:hover {
+  text-underline: none;
+  text-decoration: none;
+  color: #5309CD;
+}
+
+#basic_captcha {
+  height: 144px;
 }
