--- a/apps/studio-admin/styles/main.less
+++ b/apps/studio-admin/styles/main.less
@@ -4,6 +4,7 @@
 body {
   position: relative;
   min-height: 100%;
+  min-width: 650px;
   margin: 0;
   font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
