[feature] 关联客户选择弹窗

--- a/apps/studio-admin/styles/main.less
+++ b/apps/studio-admin/styles/main.less
@@ -29,4 +29,9 @@ a, a:active, a:visited, a:hover {
 
 .ant-layout {
   flex-direction: row;
+  min-width: 0;
+}
+
+.ant-table-body {
+  overflow-y: auto !important;
 }
